dev: image background flickering

--- a/front/index.html
+++ b/front/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo-black.svg" />
@@ -7,6 +7,9 @@
     <title>Gestion Titres</title>
   </head>
   <body>
+    <div role="none" class="bg-montceaux">
+      <img src="/montceaux.jpg" />
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
