--- a/front/index.html
+++ b/front/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gestion Titres</title>
   </head>
-  <body class="fixed block">
-    <div role="none" class="fixed bottom-0 left-0 right-0 top-0 -z-50">
-      <img src="/montceaux.jpg" class="flex h-screen w-screen object-cover" />
-    </div>
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
