--- a/front/index.html
+++ b/front/index.html
@@ -2,6 +2,10 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Gérer efficacement vos titres. Pour les banques, assurances et mutuelles"
+    />
     <link rel="icon" href="/logo-black.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gestion Titres</title>
