--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,8 @@
     />
     <link rel="icon" href="/logo-black.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <title>Gestion Titres</title>
   </head>
   <body>
