--- a/front/index.html
+++ b/front/index.html
@@ -7,7 +7,7 @@
       content="Gérer efficacement vos titres. Pour les banques, assurances et mutuelles"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <title>Gestion Titres</title>
   </head>
   <body>
